--- a/src/App.css
+++ b/src/App.css
@@ -49,8 +49,7 @@ body {
 .header img {
   width: 370px;
   height: 60px;
-  margin: 0 0 0 39%;
-  position: inherit;
+  margin: 0 0 0 130%;
 }
 
 .close-sidebar-logo svg{
@@ -74,6 +73,32 @@ body {
   animation: showSideBar 0.4s;
 }
 
+.list-title li {
+  color: rgba(255, 255, 255, 0.8);
+  text-decoration: underline;
+  margin: 5px 0px 1px 45px;
+}
+
+.list-title li:hover {
+  color: rgba(255, 255, 255, 1);
+}
+
+.region-title {
+  text-align: center;
+  font-family: snes;
+  font-size: 125px;
+  color: rgba(255, 255, 255, 0.85);
+  margin: 35px 0px 5px 0px;
+}
+
+.region-subtitle {
+  text-align: center;
+  font-family: snes;
+  font-size: 30px;
+  color: rgba(255, 255, 255, 0.75);
+  margin-top: -25px;
+}
+
 @keyframes showSideBar {
   from {
     opacity: 0;
@@ -84,10 +109,6 @@ body {
     width: 200px;
   }
 };
-
-.text-message {
-
-}
 
 .search-label {
   font-family: pretendo;
@@ -126,7 +147,7 @@ body {
   margin-left: 30%;
 }
 
-input[type="text"] {
+.search-label input[type="text"] {
   background-color: rgba(0, 0, 0, 1);
   border: solid rgba(255, 255, 255, 0.6) 1px;
   color: white;
@@ -141,18 +162,18 @@ input[type="text"] {
   margin-top: 1px;
 }
 
-input[type="text"]:focus {
+.search-label input[type="text"]:focus {
   border: solid black 1px;
 }
 
 .search-button {
-  background-color: red;
+  background-color: rgba(230, 0, 0, 1);
   color: white;
-  border: solid rgba(255, 255, 255, 1) 2px;
+  border: solid rgba(230, 0, 0, 1) 2px;
   font-weight: 950;
   padding: 0px 10px;
   border-radius: 10px;
-  margin-left: 44%;
+  margin-left: 20px;
   height: 32px;
   position: inherit;
 }
@@ -160,11 +181,11 @@ input[type="text"]:focus {
 .search-button:hover {
   background-color: red;
   color: white;
-  border: solid rgba(255, 255, 255, 0.4) 2px;
+  border: solid white 2px;
   font-weight: 950;
   padding: 0px 10px;
   border-radius: 10px;
-  margin-left: 44%;
+  margin-left: 20px;
   cursor: pointer;
 }
 
@@ -190,7 +211,7 @@ input[type="password"] {
   text-align: center;
 }
 
-input[type="text"]:hover {
+.search-label input[type="text"]:hover {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
@@ -530,4 +551,106 @@ img {
 
 #bug {
   background-color: #B9DA18;
+}
+
+.perPage-container {
+  display: flex;
+  flex-direction: row;
+  border: solid rgba(255, 255, 255, 0.5) 2px;
+  border-radius: 20px;
+  width: 320px;
+  height: 55px;
+  margin: 25px 0 25px 38.5%;
+}
+
+.perPage-container label {
+  font-family: snes;
+  font-size: 30px;
+  color: rgba(255, 255, 255, 1);
+  margin-left: 14px;
+  margin-top: 8px;
+}
+
+.perPage-container input[type=text] {
+  background-color: rgba(255, 255, 255, 0.6);
+  font-family: snes;
+  font-weight: 400;
+  font-size: 26px;
+  color: black;
+  border-color: transparent;
+  border-radius: 4px;
+  width: 40px;
+  margin-left: 5px;
+}
+
+input[type=text]:focus {
+  outline: none;
+  background-color: rgba(255, 255, 255, 0.8)
+}
+
+.perPage-container button {
+  background-color: rgba(220, 0, 0, 1);
+  color: white;
+  border: solid rgba(210, 0, 0, 1) 2px;
+  font-weight: 950;
+  padding: 0px 10px;
+  border-radius: 10px;
+  margin-left: 5px;
+  margin-top: 9px;
+  height: 40px;
+  width: 90px;
+}
+
+.perPage-container button:hover {
+  background-color: red;
+  color: white;
+  border: solid red 2px;
+  font-weight: 950;
+  padding: 0px 10px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.pagination-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  border-radius: 13px;
+  padding: 10px;
+  margin: 25px 0 25px 32%;
+  width: 550px;
+}
+
+.index-button {
+  color: white;
+  background-color: rgba(0, 0, 0, 0.7);
+  border: solid black 1px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 13px;
+  font-weight: 600;
+  padding: 1 1px 2px 0;
+  width: 30px;
+  height: 30px;
+  margin: 2px;
+}
+
+.index-button:hover {
+  text-decoration: underline;
+}
+
+.active-page {
+  color: white;
+  background-color: rgba(200, 0, 0, 0.7);
+  border: solid white 2px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 13px;
+  font-weight: 600;
+  padding: 1px 1px 2px 0;
+  width: 30px;
+  height: 30px;
+  margin: 2px;
 }
