add Regions & responsive pagination

--- a/src/App.css
+++ b/src/App.css
@@ -63,24 +63,9 @@ body {
   cursor: pointer;
 }
 
-.side-bar {
-  background-color: rgba(50, 50, 50, 0.8);
+.sidebar-text-container {
   position: fixed;
-  height: 100%;
-  top: 0px;
-  left: 0px;
-  width: 250px;
-  animation: showSideBar 0.4s;
-}
-
-.list-title li {
-  color: rgba(255, 255, 255, 0.8);
-  text-decoration: underline;
-  margin: 5px 0px 1px 45px;
-}
-
-.list-title li:hover {
-  color: rgba(255, 255, 255, 1);
+  margin: -35px 0px 0px -25px;
 }
 
 .region-title {
@@ -99,14 +84,27 @@ body {
   margin-top: -25px;
 }
 
+
+
+.side-bar {
+  background-color: rgba(50, 50, 50, 0.8);
+  position: fixed;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  width: 250px;
+  animation: showSideBar 1.5s;
+}
+
 @keyframes showSideBar {
   from {
     opacity: 0;
     width: 0px;
+    color: transparent;
   }
   to {
-    opacity: 0.8;
-    width: 200px;
+    opacity: 1;
+    width: 250px;
   }
 };
 
@@ -362,10 +360,9 @@ input[type='radio']:checked:after {
   margin-left: 1%;
 }
 
-.list-title {
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-size: 20px;
-  color: white;
+.loading-screen p {
+  font-family: pretendo;
+  font-size: 25px;
 }
 
 h3 {
@@ -584,7 +581,10 @@ img {
 }
 
 input[type=text]:focus {
-  outline: none;
+  outline: none; 
+}
+
+.perPage-container input[type=text]:focus {
   background-color: rgba(255, 255, 255, 0.8)
 }
 
@@ -624,15 +624,15 @@ input[type=text]:focus {
 .index-button {
   color: white;
   background-color: rgba(0, 0, 0, 0.7);
-  border: solid black 1px;
+  border: solid black 2px;
   border-radius: 8px;
   cursor: pointer;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size: 13px;
   font-weight: 600;
-  padding: 1 1px 2px 0;
+  padding: 1px;
   width: 30px;
-  height: 30px;
+  height: 29px;
   margin: 2px;
 }
 
@@ -643,14 +643,38 @@ input[type=text]:focus {
 .active-page {
   color: white;
   background-color: rgba(200, 0, 0, 0.7);
-  border: solid white 2px;
+  border: solid white 3px;
   border-radius: 8px;
   cursor: pointer;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size: 13px;
   font-weight: 600;
-  padding: 1px 1px 2px 0;
+  padding: 1px;
   width: 30px;
-  height: 30px;
+  height: 29px;
   margin: 2px;
 }
+
+ul li:hover {
+  color: rgba(255, 255, 255, 1);
+}
+
+.list-title {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 20px;
+  color: white;
+  animation: showText 4s;
+}
+
+.list-title li {
+  color: rgba(255, 255, 255, 0.8);
+  text-decoration: underline;
+  margin: 5px 0px 1px 45px;
+}
+
+@keyframes showText {
+  from {
+    opacity: 0;
+  }
+};
+
